	  (#13505)
	* When removing a buddy, delete the pounces associated with it.
	  (Kartik Mohta) (#1131)
	* media: Allow libpurple and plugins to set SDES properties for RTP
	  conferences. (Jakub Adam) (#12981)
	* proxy: Add new "Tor/Privacy" proxy type that can be used to
	  restrict operations that could leak potentially sensitive data
	  (e.g. DNS queries).  (#11110, #13928)

	AIM:
	* Fix setting icons with dimensions greater than 64x64 pixels by scaling
	  them down to at most 64x64. (#12874, #13165)

	Gadu-Gadu:
	* Allow showing your status only to buddies. (Mateusz Piękos) (#13358)
	* Updated internal libgadu to version 1.10.1. (Robert Matusewicz,
	  Krzysztof Klinikowski) (#13525)
	* Updated internal libgadu to version 1.11.0. (Tomasz Wasilczyk)
	  (#14248)
	* Suppress blank messages that happen when receiving inline
	  images. (Tomasz Wasilczyk) (#13554)
	* Fix sending inline images to remote users, don't crash when
	  trying to send large (> 256kB) images. (Tomasz Wasilczyk) (#13580)
	* Support typing notifications. (Jan Zachorowski, Tomasz Wasilczyk,
	  Krzysztof Klinikowski) (#13362, #13590)
	* Require libgadu 1.11.0 to avoid using internal libgadu.
	* Optional SSL connection support for GNUTLS users (not on Windows
	  yet!). (Tomasz Wasilczyk) (#13613, #13894)
	* Don't count received messages or statuses when determining whether
	  to send a keepalive packet. (Jan Zachorowski) (#13699)
	* Fix a crash when receiving images on Windows or an incorrect
	  timestamp in the log when receiving images on Linux. (Tomasz
	  Wasilczyk) (#10268)
	* Support XML events, resulting in immediate update of other users'
	  buddy icons. (Tomasz Wasilczyk) (#13739)
	* Accept poorly formatted URLs from other third-party clients in
	  the same manner as the official client.  (Tomasz Wasilczyk)
	  (#13886)

	ICQ:
	* Fix setting icons with dimensions greater than 64x64 pixels by scaling
	  them down to at most 64x64. (#12874, #13165)